--- a/requirements.txt
+++ b/requirements.txt
@@ -76,6 +76,7 @@ openpyxl==3.1.5
 overrides==7.7.0
 packaging==23.2
 pandas==2.2.3
+pandas-datareader==0.10.0
 pandocfilters==1.5.1
 parso==0.8.4
 patsy==1.0.1
